environments/prod/jellyseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: jellyseerr
  labels:
    app.kubernetes.io/name: jellyseerr
    app.kubernetes.io/instance: jellyseerr
spec:
  type: ClusterIP
  ports:
    - port: 3333
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: jellyseerr
    app.kubernetes.io/instance: jellyseerr
