environments/prod/jellyseerr/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyseerr-route
  namespace: jellyseerr
  labels:
    app.kubernetes.io/name: jellyseerr
spec:
  parentRefs:
    - name: simons-gateway
      namespace: envoy
  hostnames:
    - "seerr.simonbrundin.com"
  rules:
    - backendRefs:
        - kind: Service
          name: jellyseerr
          port: 3333
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
